
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int in_addr ;
struct TYPE_2__ {int h_addr; } ;


 TYPE_1__* gethostbyname (char*) ;
 int gethostname (char*,int) ;
 unsigned long inet_addr (int ) ;
 int inet_ntoa (int ) ;
 int memcpy (int *,int ,int) ;

unsigned long getlocalhostip()
{
 char buff[128];
 in_addr inaddr;
 if(!gethostname(buff,128))
 {
  memcpy(&inaddr,gethostbyname(buff)->h_addr,4);
  return(inet_addr(inet_ntoa(inaddr)));
 }
 return (-1);
}
