; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_36.c_getlocalhostip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_36.c_getlocalhostip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @getlocalhostip() #0 {
  %1 = alloca i64, align 8
  %2 = alloca [128 x i8], align 16
  %3 = alloca i32, align 4
  %4 = getelementptr inbounds [128 x i8], [128 x i8]* %2, i64 0, i64 0
  %5 = call i32 @gethostname(i8* %4, i32 128)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %16, label %7

7:                                                ; preds = %0
  %8 = getelementptr inbounds [128 x i8], [128 x i8]* %2, i64 0, i64 0
  %9 = call %struct.TYPE_2__* @gethostbyname(i8* %8)
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @memcpy(i32* %3, i32 %11, i32 4)
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @inet_ntoa(i32 %13)
  %15 = call i64 @inet_addr(i32 %14)
  store i64 %15, i64* %1, align 8
  br label %17

16:                                               ; preds = %0
  store i64 -1, i64* %1, align 8
  br label %17

17:                                               ; preds = %16, %7
  %18 = load i64, i64* %1, align 8
  ret i64 %18
}

declare dso_local i32 @gethostname(i8*, i32) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1

declare dso_local %struct.TYPE_2__* @gethostbyname(i8*) #1

declare dso_local i64 @inet_addr(i32) #1

declare dso_local i32 @inet_ntoa(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
